# mini-c-ares-resolver

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  resolver.rs
