[package]
name = "mini-c-ares-resolver"
license = "MIT"
version = "0.2.1"
description = """
An asynchronous DNS resolver, backed by mini-c-ares.
"""
repository = "https://github.com/zh-jq/mini-c-ares-resolver"
documentation = "https://docs.rs/mini-c-ares-resolver"
readme = "README.md"
keywords = ["DNS", "c-ares", "futures"]
categories = ["asynchronous", "network-programming"]
edition = "2021"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
c-ares = { package = "mini-c-ares", version = "0.2.0" }
futures-channel = "0.3.9"
polling = "3.1.0"

[dev-dependencies]
futures-executor = "0.3.9"

[features]
default = []
vendored = ["c-ares/vendored"]
